<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Ctv01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/st3"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#AAAAAA"
        android:textSize="39sp" />

    <TextView
        android:id="@+id/Ctv02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:gravity="center_vertical"
        android:text="@string/st21"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#AAAAAA"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rg01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="0"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rdb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rd01"
            android:textColor="#888888" />

        <RadioButton
            android:id="@+id/rdb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/rd02"
            android:textColor="#888888" />

        <RadioButton
            android:id="@+id/rdb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/rd03"
            android:textColor="#888888" />

        <RadioButton
            android:id="@+id/rdb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/rd04"
            android:textColor="#888888" />

        <RadioButton
            android:id="@+id/rdb5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/rd05"
            android:textColor="#888888" />

        <RadioButton
            android:id="@+id/rdb6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/rd06"
            android:textColor="#888888" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="left" >

        <TextView
            android:id="@+id/Ctv04"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="fill_vertical"
            android:height="40dp"
            android:text="@string/st23"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#888888"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/sspd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.78"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/stkm"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#888888"
            android:textSize="24sp"
            android:width="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lower Ranger"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#888888" />

        <SeekBar
            android:id="@+id/sb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="99"
            android:progress="50" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/bt01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.4"
            android:background="#DDDDDD"
            android:text="@string/bt01"
            android:textColor="#444444" />

        <Button
            android:id="@+id/bt02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.4"
            android:background="#DDDDDD"
            android:text="@string/bt02"
            android:textColor="#444444" />
    </LinearLayout>

</LinearLayout>